test/expected/explain_la_nr.out
explain [i,&]
           ^
12: error: default capture must be specified first
